yFiles for Java (Swing) 3.5 demos