@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- ////////////////////////////////////////////////////////////////////////
      //
-     // This demo file is part of yFiles for Java (Swing) 3.4.
+     // This demo file is part of yFiles for Java (Swing) 3.5.
      //
-     // Copyright (c) 2000-2021 by yWorks GmbH, Vor dem Kreuzberg 28,
+     // Copyright (c) 2000-2022 by yWorks GmbH, Vor dem Kreuzberg 28,
      // 72070 Tuebingen, Germany. All rights reserved.
      //
      // yFiles demo files exhibit yFiles for Java (Swing) functionalities. Any redistribution
@@ -72,41 +72,10 @@
     </path>
   </target>
 
-  <target name="check-fx-sdk">
-    <condition
-     property="path.to.fx.isset"
-     value="true"
-     else="false">
-      <isset property="path.to.fx"/>
-    </condition>
-    <property name="java.fx.args" value=""/>
-    <script language="javascript">
-    try {
-      load("nashorn:mozilla_compat.js");
-      importClass(javafx.scene.paint.Color);
-      var color = Color.RED;
-      print("FX classes found");
-    } catch(e) {
-      print(e + e.message);
-      print("FX classes not found");
-      if(project.getProperty("path.to.fx.isset").equals("false")) {
-        var fail = project.createTask("fail");
-        fail.setMessage("FX modules could not be found. Please specify the 'path.to.fx' property. See https://openjfx.io/openjfx-docs/#install-javafx for more information.");
-        fail.execute();
-      } else {
-        print("path.to.fx = " + project.getProperty("path.to.fx"));
-        project.setProperty("java.fx.args",
-              "--module-path "
-              + project.getProperty("path.to.fx")
-              + " --add-modules=javafx.fxml,javafx.web,javafx.swing,javafx.swt");
-      }
-    }
-    </script>
-    <echo>java.fx.args = ${java.fx.args}</echo>
-  </target>
+  <include file="build-utils.xml" as="utils"/>
 
   <!-- compiles the application's classes -->
-  <target name="compile" description="Compiles the demo files" depends="-init,check-fx-sdk">
+  <target name="compile" description="Compiles the demo files" depends="-init,utils.check-fx-sdk">
     <mkdir dir="${demo.class.dir}"/>
     <javac includeAntRuntime="false" includes="**/*.java" destdir="${demo.class.dir}" debug="true">
       <src path="${demo.src.dir}"/>
